# consolewatch

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: console_entries.py  diagnostics.py  health.py  preserved_captures.py  printers.py  search_export.py  sessions.py  watch.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/integrations/: moonraker.py
backend/app/models/: entities.py
backend/app/schemas/: console.py  diagnostics.py  preservation.py  printers.py  search.py  sessions.py  watch.py
backend/app/services/: classification.py  console_entries.py  diagnostics.py  manual_sessions.py  preservation.py  printer_profiles.py  restart_boundaries.py  retention.py  rolling_watch.py  runtime.py  search_export.py
backend/tests/: test_console_ingestion.py  test_diagnostics.py  test_manual_sessions.py  test_moonraker_client.py  test_preservation.py  test_printers_api.py  test_restart_boundaries.py  test_retention.py  test_search_export.py
docs/: ROADMAP.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: HealthStatus.tsx
frontend/src/lib/: api.ts  time.ts
frontend/src/pages/: ConsoleHistoryPage.tsx  DashboardPage.tsx  LiveConsolePage.tsx  ManualSessionsPage.tsx  PreservedCapturesPage.tsx  PrintersPage.tsx  SearchPage.tsx  SettingsPage.tsx
